# synapse

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/ideation/: SKILL.md
.claude/skills/index/: SKILL.md
.claude/skills/ingest/: SKILL.md  validate.sh
.claude/skills/lint/: SKILL.md
.claude/skills/merge/: SKILL.md
.claude/skills/parse/: SKILL.md
.claude/skills/scripts/: validate.sh
.claude/skills/search/: SKILL.md
.claude/skills/update/: SKILL.md
env/: .env.example
lib/: __init__.py  docx.py  hwp.py  pdf.py
scripts/: embedding.py  index.py  schema.py  search.py
